--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg": "^12.3.0",
     "react-native-web": "~0.18.7"
   },
   "devDependencies": {
@@ -52,6 +53,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "react-native-svg-transformer": "^1.0.0",
     "tailwindcss": "^3.2.0",
     "typescript": "^4.8.4"
   },
