--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.12",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "firebase": "^9.13.0",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.18",
     "react": "18.0.0",
