--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^12.3.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "expo-camera": "~12.3.0",
+    "expo-sharing": "~10.3.0",
+    "expo-media-library": "~14.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
