--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@react-navigation/stack": "^6.3.2",
     "autoprefixer": "^10.4.12",
     "expo": "~46.0.16",
+    "expo-camera": "~12.3.0",
+    "expo-media-library": "~14.2.0",
+    "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.13.0",
     "nativewind": "^2.0.11",
@@ -34,9 +37,7 @@
     "react-native-screens": "~3.15.0",
     "react-native-svg": "^12.3.0",
     "react-native-web": "~0.18.7",
-    "expo-camera": "~12.3.0",
-    "expo-sharing": "~10.3.0",
-    "expo-media-library": "~14.2.0"
+    "styled-components": "^5.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
