--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --check ./src"
   },
   "dependencies": {
+    "@react-native-firebase/app-check": "^16.4.6",
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/material-top-tabs": "^6.3.0",
